@@ -32,6 +32,7 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -67,7 +68,7 @@ public class HoverProviderTest {
 //            JsonObject obj = new JsonObject();
 //            obj.add("position", configJson.get("position"));
 //            obj.add("source", configJson.get("source"));
-//            obj.add("expected", parser.parse(response));
+//            obj.add("expected", JsonParser.parseString(response));
 //            String objStr = obj.toString().concat(System.lineSeparator());
 //            java.nio.file.Files.write(FileUtils.RES_DIR.resolve("hover").resolve("configs").resolve(config),
 //                                      objStr.getBytes(java.nio.charset.StandardCharsets.UTF_8));
@@ -101,11 +102,11 @@ public class HoverProviderTest {
     }
 
     private Object[][] testSubset() {
-        return new Object[0][];
+        return new Object[][]{};
     }
 
     private List<String> skipList() {
-        return List.of("hover_for_api_docs_enum.json");
+        return Collections.emptyList();
     }
 
     private Position getPosition(JsonObject config) {
